@@ -1,11 +1,30 @@
 # Minesweeper
 
-This is recreation of the classic Minesweeper game on the Java with the use of JavaFX libraries.
-For the game you will need mouse: left mouse button opens the tile, right mouse button marks the tile with flag.
-To launch the release you should have latest JRE installed on your PC.
+Minesweeper is a single-player puzzle video game. The objective of the game is to clear a rectangular board containing hidden "mines" or bombs without detonating any of them, with help from clues about the number of neighboring mines in each field.
 
 
 # Requirements
+
+## For Game
+
+## For Source Code
+### Download the JavaFX SDK:
+#### https://gluonhq.com/products/javafx/
+
+### Add JavaFX library:
+
+#### File -> Project Structure -> Libraries -> add library 
+#### path->C:\javafx-sdk-11.0.2\lib (will depend)
+
+### Add VM Options:
+#### Run-> Edit Configuration -> modify options -> add vm options
+#### --module-path %PATH_TO_JAVAFX_SDK/LIB% --add-modules javafx.controls,javafx.fxml 
+
+
+For the game you will need mouse: left mouse button opens the tile, right mouse button marks the tile with flag.
+
+## For Release
+  To launch the release you should have latest JRE installed on your PC.
 
 ## Image 1
 ![](screenshots/shot1.PNG)
